[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/themes/default.theme" type="Theme" id=1]
[ext_resource path="res://assets/audio/UI/snd_select.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/UI/snd_buttonPress.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/ui/FinalScoreUI2.gd" type="Script" id=4]
[ext_resource path="res://assets/themes/big_text.theme" type="Theme" id=5]
[ext_resource path="res://assets/themes/HUD.theme" type="Theme" id=6]
[ext_resource path="res://nodes/vfx/Background.tscn" type="PackedScene" id=7]

[node name="FinalScoreUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
sndSelect = ExtResource( 2 )
sndPress = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Background" parent="CanvasLayer" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.901961 )

[node name="ScoreBG" type="ColorRect" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 320.0
color = Color( 0.0705882, 0.054902, 0.129412, 0.45098 )

[node name="ResultText" type="Label" parent="CanvasLayer/ScoreBG"]
anchor_right = 1.0
margin_left = 128.0
margin_right = -128.0
margin_bottom = 64.0
theme = ExtResource( 5 )
text = "GAME OVER!"
align = 1
valign = 1

[node name="ScoreCalc" type="Control" parent="CanvasLayer/ScoreBG"]
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = -128.0

[node name="BaseScore" type="Control" parent="CanvasLayer/ScoreBG/ScoreCalc"]
anchor_right = 1.0
margin_bottom = 32.0

[node name="Header" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/BaseScore"]
margin_right = 184.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "BaseScore"
uppercase = true

[node name="Label" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/BaseScore"]
margin_left = 8.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 32.0
theme = ExtResource( 6 )
text = "BASE SCORE"
uppercase = true

[node name="LifeBonus" type="Control" parent="CanvasLayer/ScoreBG/ScoreCalc"]
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 80.0

[node name="Header" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/LifeBonus"]
margin_right = 184.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Lifebonus"
uppercase = true

[node name="Label" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/LifeBonus"]
margin_left = 8.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 32.0
theme = ExtResource( 6 )
text = "BASE SCORE"
uppercase = true

[node name="MultiBonus" type="Control" parent="CanvasLayer/ScoreBG/ScoreCalc"]
anchor_right = 1.0
margin_top = 96.0
margin_bottom = 128.0

[node name="Header" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/MultiBonus"]
margin_right = 184.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Multiplierbonus"
uppercase = true

[node name="Label" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/MultiBonus"]
margin_left = 8.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 32.0
theme = ExtResource( 6 )
text = "BASE SCORE"
uppercase = true

[node name="exes" type="Control" parent="CanvasLayer/ScoreBG/ScoreCalc"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 96.0

[node name="Label2" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/exes"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 8.0
margin_bottom = -16.0
theme = ExtResource( 6 )
text = "x"
align = 1
uppercase = true

[node name="Label3" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalc/exes"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 16.0
margin_right = 8.0
margin_bottom = 32.0
theme = ExtResource( 6 )
text = "x"
align = 1
uppercase = true

[node name="FinalScore" type="Control" parent="CanvasLayer/ScoreBG"]
margin_left = 192.0
margin_top = 112.0
margin_right = 448.0
margin_bottom = 192.0

[node name="Header" type="Label" parent="CanvasLayer/ScoreBG/FinalScore"]
margin_right = 171.0
margin_bottom = 27.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 1 )
text = "TOTAL SCORE"
align = 1
valign = 1

[node name="Label" type="Label" parent="CanvasLayer/ScoreBG/FinalScore"]
margin_left = -32.0
margin_top = 40.0
margin_right = 181.0
margin_bottom = 68.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 5 )
text = "TOTAL SCORE"
align = 1
valign = 1

[node name="SelectUI" type="Control" parent="CanvasLayer/ScoreBG"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -104.0
margin_right = 192.0
theme = ExtResource( 1 )

[node name="ReplayButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_right = -24.0
margin_bottom = -28.0
focus_neighbour_bottom = NodePath("../ReturnButton")
text = "Replay"

[node name="ReturnButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_right = -24.0
margin_bottom = 4.0
focus_neighbour_top = NodePath("../ReplayButton")
text = "Return"

[node name="SendFeedbackButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 28.0
margin_right = -32.0
margin_bottom = 42.0
focus_neighbour_top = NodePath("../ReturnButton")
text = "Send Feedback"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/ReplayButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/ReturnButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/SendFeedbackButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/SendFeedbackButton" to="." method="_on_SendFeedbackButton_pressed"]
